# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS
src/custom_hooks/: copyright_checker.py  nested_hook.py
