[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_hooks"
version = "1.1.0"
description = "Custom pre-commit hooks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gitpython"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist"
]

[project.scripts]
check-version-bumped = "custom_hooks.check_version_bumped:main"
copyright-checker = "custom_hooks.copyright_checker:main"
